deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dso-demo-static
  labels:
    app: dso-demo-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dso-demo-static
  template:
    metadata:
      labels:
        app: dso-demo-static
    spec:
      imagePullSecrets:
        - name: quay-image-pull-secret
      containers:
        - name: dso-demo-static
          image: docker.io/nginxinc/nginx-unprivileged
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080  # Exposes container port
